<?xml version="1.0"?>
<package>
  <name>ml_msgs</name>
  <version>0.0.1</version>
  <description>marker_localization message definitions</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <author>TODO</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent/>
  </export>
</package>
